[package]
name = "minimal-left-right"
version = "0.1.0"
edition = "2024"

[dependencies]
spin = { version = "0.10", default-features = false, features = [
    "mutex",
    "spin_mutex",
    "rwlock",
] }

[lints.rust]
missing_docs = "warn"
non_ascii_idents = "warn"
unreachable_pub = "warn"

[lints.clippy]
match_bool = "allow"
single_match_else = "allow"

pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
default_union_representation = "warn"
else_if_without_else = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
integer_division = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
missing_assert_message = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
non_zero_suggestions = "warn"
precedence_bits = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
same_name_method = "warn"
tests_outside_test_module = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unused_result_ok = "warn"
unwrap_used = "warn"
